--- a/bin/views/fxml/home.fxml
+++ b/bin/views/fxml/home.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -37,7 +38,7 @@
                <children>
                   <Pane prefHeight="102.0" prefWidth="562.0">
                      <children>
-                        <TextField layoutX="17.0" layoutY="27.0" prefHeight="48.0" prefWidth="528.0">
+                        <TextField fx:id="textSearch" layoutX="17.0" layoutY="27.0" prefHeight="48.0" prefWidth="528.0">
                            <font>
                               <Font size="18.0" />
                            </font></TextField>
@@ -45,13 +46,22 @@
                   </Pane>
                   <Pane prefHeight="102.0" prefWidth="158.0">
                      <children>
-                        <SplitMenuButton fx:id="splitMenuBtnSearch" layoutY="27.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="124.0" text="Search">
+                        <SplitMenuButton fx:id="splitMenuBtnSearch" layoutY="27.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="124.0" text="Option">
                           <items>
                           </items>
                            <font>
                               <Font size="16.0" />
                            </font>
                         </SplitMenuButton>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="102.0" prefWidth="158.0">
+                     <children>
+                        <Button fx:id="btnSearch" layoutY="27.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="124.0" text="Search">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Button>
                      </children>
                   </Pane>
                </children>
